template/modules/web_server/sg.tf
resource "aws_security_group" "allow_ingress" {
  name_prefix = "allow_ingress"
  description = "Allow incoming traffic on port 80 and 443"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
